--- a/PaintDrops/PaintDrops.csproj
+++ b/PaintDrops/PaintDrops.csproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DrawingLibrary\DrawingLibrary.csproj" />
     <ProjectReference Include="..\PaintDropSimulation\PaintDropSimulation.csproj" />
+    <ProjectReference Include="..\PatternGenerationLib\PatternGenerationLib.csproj" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
