--- a/PatternGenerationLibTests/PatternGenerationLibTests.csproj
+++ b/PatternGenerationLibTests/PatternGenerationLibTests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -17,7 +17,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PaintDropSimulation\PaintDropSimulation.csproj" />
     <ProjectReference Include="..\PatternGenerationLib\PatternGenerationLib.csproj" />
   </ItemGroup>
 
